	  freed at exceptions.

	* ext/socket/socket.c (init_unixsock): ditto.

	* ext/socket/socket.c (udp_connect): ditto.

Mon Jun  3 07:07:07 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (here_document): check if identifier is terminated.
	  (ruby-bugs-ja:PR#239)

	* parse.y (yylex): should pushback proper char after '**'.
	  (ruby-bugs-ja:PR#240)

Thu May 30 09:16:36 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb: if StringIO is usable then use it.

Wed May 29 13:45:15 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb: not use const if GET, HEAD. check multipart form head.

Tue May 28 12:13:37 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (scope_node): trick to keep the node has a scope.

	* eval.c (rb_eval): NODE_EVSTR: write back local_tbl to the node.

	* eval.c (rb_eval): NODE_SCOPE: hold the scope node in ruby_scope.

	* eval.c (module_setup): ditto.

	* eval.c (rb_call0): ditto.

	* node.h (NEW_DASGN, NEW_DASGN_CURR): remove surplus semicolons.

Fri May 24 09:06:29 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_arg): nil test against v[6] (usec).

Thu May 23 14:52:32 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ruby.c (proc_options): -v should not print version if
	  proc_options called via moreswitches().

Thu May 23 09:13:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): removed "-*-" support for #! line.

Wed May 22 21:36:11 2002  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/parsedate.rb: updated to the new version (based on date2 2.6.1).

Wed May 22 21:26:47 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ruby.c (proc_options): -T consumes digits only.

Wed May 22 20:18:31 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: need not link vsnprintf.o on MinGW.

Wed May 22 18:40:22 2002  Minero Aoki  <aamine@loveruby.net>

	* parse.y (yylex): case '<': here-document has eaten '-'.
